prevent inline-input element from collapsing due to empty value

--- a/src/app/ui/inline-input/inline-input.component.scss
+++ b/src/app/ui/inline-input/inline-input.component.scss
@@ -18,6 +18,12 @@
   }
 }
 
+:host-context(.summary-point) {
+  .inline-input-wrapper {
+    min-width: 35px;
+  }
+}
+
 .inline-input-wrapper {
   display: inline-block;
   position: relative;
